updated landign page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,6 +30,19 @@
   font-weight: 300;
 }
 
+.profile-picture{
+    margin-top: 2%;
+    border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
+}
+
+.profile-name{
+    text-align: center;
+}
+
 ::-moz-placeholder {
   /* Mozilla Firefox 19+ */
   color: #777777;
